--- a/KretaDesktop/View/ContentView/ContentListSubjectView.xaml
+++ b/KretaDesktop/View/ContentView/ContentListSubjectView.xaml
@@ -92,6 +92,12 @@
                             Visibility="{Binding NoWaitingForNewData,Converter={StaticResource boolToVisibilityConverter},UpdateSourceTrigger=PropertyChanged}">
 
                     </Button>
+                    <Button Style="{DynamicResource ContentButton}" 
+                            Command="{Binding CancelCommand}" 
+                            Margin="4 2 2 2" Content="{DynamicResource buttonCancel}"
+                            Visibility="{Binding WaitingForNewData,Converter={StaticResource boolToVisibilityConverter},UpdateSourceTrigger=PropertyChanged}">
+
+                    </Button>
                 </StackPanel>
             </Grid>
         </Expander>
