Mégsem gomb kész

--- a/KretaDesktop/View/ContentView/ContentListSubjectView.xaml
+++ b/KretaDesktop/View/ContentView/ContentListSubjectView.xaml
@@ -146,6 +146,7 @@
                       SelectedItem="{Binding SelectedSubject}"                      
                       SelectedIndex="{Binding SelectedItemIndex}"
                       Style="{DynamicResource DataGridCrudStyle}"
+                      Visibility="{Binding NoWaitingForNewData,Converter={StaticResource boolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}"
                       Width="300"
                       ColumnHeaderStyle="{DynamicResource DataGridCRUDHeaderStyle}"
              >
