--- a/KretaRazorPages/Pages/Index.cshtml
+++ b/KretaRazorPages/Pages/Index.cshtml
@@ -5,11 +5,57 @@
 
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = Localizer["Title"];
 
 }
 
 <div class="text-center">
     <h1 class="display-4">@Localizer["Welcome"]</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Az oldal célja a különbőző fejlesztéseim bemutatása.</p>
 </div>
+
+<div class="flex flex-column min-h-screen" >
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <span class="img-thumbnail">
+            <a class="navbar-brand" asp-controller="home" asp-action="index">
+                <img src="~/images/profil.png" width="30" height="30">
+            </a>
+        </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li>
+                    <a class="nav-link">Magamról</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">C# Backend</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">C# Desktop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">C# Razor</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">C# Testek</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">C# VUE</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Spring Backend</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Spring Tymleaf, JSP</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="p-4">
+    </div>
+</div>
+
+
+
