--- a/KretaRazorPages/Pages/Index.cshtml
+++ b/KretaRazorPages/Pages/Index.cshtml
@@ -14,6 +14,9 @@
     <p>Az oldal célja a különbőző fejlesztéseim bemutatása.</p>
 </div>
 
+<!-- 
+https://www.youtube.com/watch?v=OoAATsyPbGs
+-->
 <div class="flex flex-column min-h-screen" >
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <span class="img-thumbnail">
@@ -27,7 +30,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li>
-                    <a class="nav-link">Magamról</a>
+                    <a class="nav-link" asp-page="Index">Magamról</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">C# Backend</a>
@@ -53,8 +56,9 @@
             </ul>
         </div>
     </nav>
-    <div class="p-4">
-    </div>
+    <div class="container body-content">
+        
+    </div> 
 </div>
 
 
