Minden About menüpont működik

--- a/KretaRazorPages/Pages/Shared/_AboutMeLayout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_AboutMeLayout.cshtml
@@ -18,30 +18,30 @@ https://www.youtube.com/watch?v=OoAATsyPbGs
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-                <li>
-                    <a class="nav-link" asp-page="abaoutme">Magamról</a>
+             <li>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Menu/AboutMe/Index">Magamról</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-page="csarpbackend">C# Backend</a>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Menu/AboutMe/CSarpBackend">C# Backend</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">C# Desktop</a>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Menu/AboutMe/CSarpDesktop">C# Desktop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">C# Razor</a>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Menu/AboutMe/CSarpRazor">C# Razor</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">C# Testek</a>
+                    <a class="nav-link test-dark" asp-area="" asp-page="/Menu/AboutMe/CSarpTest">C# Testek</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">C# VUE</a>
+                    <a class="nav-link test-dark" asp-area="" asp-page="/Menu/AboutMe/CSarpVUE">C# VUE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Spring Backend</a>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Menu/AboutMe/SpringBackend">Spring Backend</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Spring Frontend</a>
-                </li>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Menu/AboutMe/SpringFrontend">Spring Frontend</a>
+                </li>                          
             </ul>
         </div>
     </nav>
