--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpTest.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpTest.cshtml
@@ -1,8 +1,7 @@
 ﻿@page
 @{
-    ViewData["Title"] = "Magamról";
+    ViewData["Title"] = "C# Test";
     Layout = "~/Pages/Shared/_AboutMeLayout.cshtml";
 }
 
-<div class="asp-"
 <h2>@ViewData["Title"]</h2>
