--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Iskolai adminisztráció</a>
                <!--
