--- a/KretaRazorPages/Pages/Menu/AboutMe/Index.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/Index.cshtml
@@ -3,6 +3,19 @@
     ViewData["Title"] = "Magamról";
     Layout = "~/Pages/Shared/_AboutMeLayout.cshtml";
 }
-
-<div class="asp-"
-<h2>@ViewData["Title"]</h2>
+<div class="pt-3">
+    <h2 class="display-6 pt-6">@ViewData["Title"]</h2>
+    <p class="lead bg-light small pt-2">Gyuris Csaba vagyok, több éve tanitok informatikát, az utolsó 10 évben pedig szoftverfejlesztést. </p>
+    <p class="pt-2">Szerenék váltani, és most kezdtem akív munkakeresésbe. Ezért 2022 auguszusától egy szovtverrendszer módszeres fejlesztésében kezdtem,
+                    ezeket a kódokat ajánlom azoknak, akik meg akarnak ismerkedni velem és szaktudásommal.</p>
+    <p class="pt-2">A tanítás során mintapéldám egy elképzelt iskoalai adminisztrációs program, ennek részeit fejlesztjük. 
+                    Ezen az oldalon azokat a kódokat gyűjtöttem össze, amelyek összegzik a jelenlegi tudásomat 
+                    valamint számomra is áttekintést nyújtanak különböző technológiákban és kódokban amelyekben jártasságot szereztem.</p>
+    <p class="pt-2">Telefonos eléhrtőségem: 30/5653930.</p>
+    <p class=" pt2">
+        Lépjen kapcsolatba <a href="mailto:gycsaba72ATgmailDOTcom"
+                         onclick="this.href=this.href
+                    .replace(/AT/,'&#64;')
+                    .replace(/DOT/,'&#46;')">velem</a>...
+    </p>
+</div>
