--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpDesktop.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpDesktop.cshtml
@@ -8,9 +8,11 @@
 <p class="lead bg-light small pt-2">A tanítás során a legfontosabb témám a desktop programozás volt, így ebben C#-ban sokat kellett tanuljak.</p>
 <p class="pt-2">Összegyűjtöttem a legfontosabb kódrészleteket a Git-Hub-ról:</p>
 <ul>
+
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaDesktop/Converter">Converterek</a></li>
     <li class ="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaDesktop/Localization">Lokalizáció</a></li>
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaDesktop/Validations">Validáció</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href=">API elérés library</a></li>
     <ul>
         <li>Név validálás</li>
     </ul>
@@ -47,5 +49,5 @@
             </a>
         </li>
     </ul>
-    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/ApplicationProperties">Applikáció konfigurálás</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/ApplicationProperties">Applikáció konfigurálás library</a></li>
 </ul>
