--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpBackend.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpBackend.cshtml
@@ -4,4 +4,10 @@
     Layout = "~/Pages/Shared/_AboutMeLayout.cshtml";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h5 class="pt-3">@ViewData["Title"]</h5>
+<p class="lead bg-light small pt-2">A backend programozás egy új terület amivel ebben az évben kezdtem foglalkozni.</p>
+<p class="pt-2">Összefoglalva a legfontosabb fejlesztések:</p>
+<ul>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/ServiceKretaLogger">Loggolás library</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaWebApi/Controllers">Kidolgozott Controllerek (a subject jobban, a school class kevésbé)</a></li>
+</ul>
