--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpBackend.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpBackend.cshtml
@@ -6,8 +6,13 @@
 
 <h5 class="pt-3">@ViewData["Title"]</h5>
 <p class="lead bg-light small pt-2">A backend programozás egy új terület amivel ebben az évben kezdtem foglalkozni.</p>
-<p class="pt-2">Összefoglalva a legfontosabb fejlesztések:</p>
+<p class="pt-2">A fejlesztés .net 6 verzióban történik. Összefoglalva a legfontosabb fejlesztések:</p>
 <ul>
-    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/ServiceKretaLogger">Loggolás library</a></li>
-    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaWebApi/Controllers">Kidolgozott Controllerek (a subject jobban, a school class kevésbé)</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Models/Helpers">Helpers</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Services">Service réteg</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Repositories">Repository réteg</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Models">Model réteg</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaWebApi/ExceptionHandler">Kivétel elkapás</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/ServiceKretaLogger">Loggolás library</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaWebApi/Controllers">Kidolgozott Controllerek (a subject jobban, a school class kevésbé)</a></li>
 </ul>
