--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpDesktop.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpDesktop.cshtml
@@ -6,17 +6,20 @@
 
 <h5 class="pt-3">@ViewData["Title"]</h5>
 <p class="lead bg-light small pt-2">A tanítás során a legfontosabb témám a desktop programozás volt, így ebben C#-ban sokat kellett tanuljak.</p>
-<p class="pt-2">Összegyűjtöttem a legfontosabb kódrészleteket a Git-Hub-ról:</p>
+<p class="pt-2">A fejlesztés .net 6 verzióban történik. Összegyűjtöttem a legfontosabb kódrészleteket a Git-Hub-ról:</p>
 <ul>
 
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaDesktop/Converter">Converterek</a></li>
     <li class ="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaDesktop/Localization">Lokalizáció</a></li>
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaDesktop/Validations">Validáció</a></li>
-    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href=">API elérés library</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/ServiceKretaAPI">API elérés library</a></li>
     <ul>
         <li>Név validálás</li>
     </ul>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Services">Service réteg</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Repositories">Repository réteg</a></li>
     <li class ="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaDesktop/Resources">XAML - formázás</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Models">Model réteg</a></li>
     <li>View</li>
     <ul>
         <li>
