--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpRazor.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpRazor.cshtml
@@ -4,4 +4,8 @@
     Layout = "~/Pages/Shared/_AboutMeLayout.cshtml";
 }
 
-<h2>@ViewData["Title"]</h2>
+
+<h5 class="pt-3">@ViewData["Title"]</h5>
+<p class="lead bg-light small pt-2">A frontend programozás Razor oldalakkal egy új terület amivel ebben az évben kezdtem foglalkozni.</p>
+<p class="pt-2">A fejlesztés .net 6 verzióban történik. Összefoglalva a legfontosabb fejlesztések:</p>
+<li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Models/Helpers">Subject CRUD</a></li>
