Test razor oldal

--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpTest.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpTest.cshtml
@@ -8,5 +8,8 @@
 <p class="lead bg-light small pt-2">A tanítás során a legfontosabb témám a desktop programozás volt. A tanulás során megtanultam teszteket is írni.</p>
 <p class="pt-2">Összegyűjtöttem a legfontosabb kódrészleteket a Git-Hub-ról:</p>
 <ul>
-    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaParancssoriAlkalmazasMsTest">MSTest</a>"
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaParancssoriAlkalmazasNUnitTest">NUnit Test</a>"
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaParancssoriAlkalmazasTestXUnit">XUnit Test</a>"
+
 </ul>
