--- a/KretaDesktop/Localization/Resources/hu-HU/StringResources.xaml
+++ b/KretaDesktop/Localization/Resources/hu-HU/StringResources.xaml
@@ -38,6 +38,7 @@
 
     <!-- DataProperties -->
     <system:String x:Key="id">Azon.</system:String>
+    
     <!-- Subject -->
     <system:String x:Key="subjectName">Tantárgy név</system:String>
         
@@ -49,6 +50,11 @@
     <system:String x:Key="validationNameFirstLetterNotUppercase">A név nem nagybetűvel kezdődik!</system:String>
     <system:String x:Key="validationOtherLetterNotLowercase">A kezdőbetűk után kisbetűket írjon!</system:String>
     <system:String x:Key="validationNameOnlyLetters">A névben csak batűk lehetnek!</system:String>
+
+    <system:String x:Key="contentSorting">Rendezés:</system:String>
+
+    <!-- info -->
+    <system:String x:Key="infoSubjectTable">Iskolai tantárgyak kezelése.</system:String>
     
   
 </ResourceDictionary>
