--- a/KretaDesktop/View/ContentView/ContentListSubjectView.xaml
+++ b/KretaDesktop/View/ContentView/ContentListSubjectView.xaml
@@ -28,7 +28,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="20"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock FontSize="24" HorizontalAlignment="Left"
                Foreground="{DynamicResource ContentForegroundColor}"
@@ -184,8 +184,8 @@
             <Button x:Name="btNextPage" Style="{DynamicResource ContentButton}" Command="{Binding NextPageCommand}" Content=">" Grid.Column="3" />
             <Button x:Name="btLastPage" Style="{DynamicResource ContentButton}" Command="{Binding LastPageCommand}" Content=">>" Grid.Column="4" />
         </Grid>
-        <StackPanel Grid.Row="8" Orientation="Horizontal" Background="{DynamicResource NavigationBackgroundColor}">
-            <Label Margin="8 0 0 8" Content="{Binding ContentInfo}" Foreground="{DynamicResource ContentLabelErrorForeground}"></Label>
+        <StackPanel Grid.Row="8" Orientation="Horizontal" Background="{DynamicResource NavigationBackgroundColor}" VerticalAlignment="Center">
+            <TextBlock Margin="8 0 0 8" Text="{Binding ContentInfo}" Foreground="{DynamicResource ContentLabelErrorForeground}"/>
         </StackPanel>
     </Grid>
 </UserControl>
