--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
@@ -5,26 +5,43 @@
 
 @{
     var subjectService = new APISubjectService();
-    long nextId = await subjectService.GetNextSubjectIdAsync();
-}
+    try
+    {
+        long nextId = await subjectService.GetNextSubjectIdAsync();
 
-<form method="post">
-     <div class="border p-3 mt-4">
-         <div class="row pb-2"
-            <h2 class="text-primary pl-3">New subject:</h2>
-            <hr />
-          </div>
-          <div asp-validation-summary="All"></div>
-          <div class="mb-3">
-            <label asp-for="Subject.Id"></label>
-            <input asp-for="Subject.Id" type="text" value="@nextId" readonly/>
-         </div>
-         <div class="mb-3">
-            <label asp-for="Subject.SubjectName"></label>
-            <input asp-for="Subject.SubjectName" class="form-control"/>
-            <span asp-validation-for="Subject.SubjectName" class="text-danger"></span>
-         </div>
-         <button type="submit" class="btn btn-primary">Save</button>
-         <a asp-page="/Menu/SubjectMenu/Index" class="btn btn-secondary">Back to list</a>
-     </div>
-</form>
+    <form method="post">
+             <div class="border p-3 mt-4">
+                 <div class="row pb-2">
+                    <h2 class="text-primary pl-3">New subject:</h2>
+                    <hr />
+                  </div>
+                  <div asp-validation-summary="All"></div>
+                  <div class="mb-3">
+                    <label asp-for="Subject.Id"></label>
+                    <input asp-for="Subject.Id" type="text" value="@nextId" readonly/>
+                 </div>
+                 <div class="mb-3">
+                    <label asp-for="Subject.SubjectName"></label>
+                    <input asp-for="Subject.SubjectName" class="form-control"/>
+                    <span asp-validation-for="Subject.SubjectName" class="text-danger"></span>
+                 </div>
+                 <button type="submit" class="btn btn-primary">Save</button>
+                 <a asp-page="/Menu/SubjectMenu/Index" class="btn btn-secondary">Back to list</a>
+             </div>
+        </form>
+
+    }
+    catch(Exception exception)
+    {
+        <div class="border p-3 mt-4">
+            <div class="row pb-2">
+                    <h2 class="text-primary pl-3">Error</h2>
+                    <p>@exception.Message</p>
+                       <hr />
+                <a asp-page="/Menu/SubjectMenu/Index" class="btn btn-secondary">Back to list</a>
+            </div>
+        </div>
+
+        }        
+    }
+
