--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -11,13 +11,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Iskolai adminisztráció - 1 </title>
+    <title>@ViewData["Title"] - Iskolai adminisztráció</title>
     <!--    
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
     https://bootswatch.com
+    <link rel="stylesheet" href="~/css/bootswatch-cyborg.css" />
     -->
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     
-    <link rel="stylesheet" href="~/css/bootswatch-cyborg.css" />    
     <!--
     Zászlók   
     -->
@@ -85,13 +86,14 @@
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <!--
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!--
+   
     -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <!-- toastr-->
-    <script scr="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script scr="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     
     <script src="~/js/site.js" asp-append-version="true"></script>
 
