--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Iskolai adminisztráció</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Iskolai adminisztráció - 3</a>
                <!--
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -86,8 +86,9 @@
         </div>
     </footer>
 
+    <!--
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
+    -->
     <!--
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     -->
@@ -96,8 +97,9 @@
     <!-- toastr-->
     <script scr="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     
+    <!--
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
