--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -18,7 +18,10 @@
     https://bootswatch.com
 
     -->
-    <link rel="stylesheet" href="~/css/bootswatch-cyborg.css" />    
+    <link rel="stylesheet" href="~/css/bootswatch/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/bootswatch/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/bootswatch/_variables.scss" />
+    <link rel="stylesheet" href="~/css/bootswatch/_bootswatch.scss" />
     <!--
     Zászlók   
     -->
@@ -34,7 +37,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Iskolai adminisztráció - 3</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Iskolai adminisztráció - 4</a>
                <!--
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
