--- a/KretaRazorPages/Pages/Index.cshtml
+++ b/KretaRazorPages/Pages/Index.cshtml
@@ -12,7 +12,9 @@
 
 <div class="text-center">
     <h1 class="display-4">@Localizer["Welcome"]</h1>
-    <p>Az oldal célja a különbőző fejlesztéseim bemutatása.</p>
+</div>
+<div class="text-bg-light">
+    <p>Gyuris Csaba vagyok. Szeged-Gyálaréten élek családommal. Jelenleg szoftverfejlesztést tanítok technikumi osztályokban. Az elmúlt időszakban C# desktop és rest api, Java Spring és VUE keretrendszereket tanítok, fejlesztek egy kitalált iskolai adminisztrációs programot. Az oldal ezeket a kódokat mutatja be.</p>
 </div>
 <ul>
 
