--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpBackend.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpBackend.cshtml
@@ -7,8 +7,9 @@
 <h5 class="pt-3">@ViewData["Title"]</h5>
 <p class="lead bg-light small pt-2">A backend programozás egy új terület amivel ebben az évben kezdtem foglalkozni.</p>
 <p class="pt-2">A fejlesztés .net 6 verzióban történik. Összefoglalva a legfontosabb fejlesztések:</p>
-<p class="pt-2"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6">Repository</a></p>
+<p class="pt-2"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6">GitHub publikus repo</a></p>
 <ul>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaWebApiTest">Backend tesztek</a></li>
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Models/Helpers">Helpers</a></li>
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Services">Service réteg</a></li>
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-backend/KretaParancssoriAlkalmazas/Repositories">Repository réteg</a></li>
