--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpVUE.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpVUE.cshtml
@@ -5,3 +5,7 @@
 }
 
 <h2>@ViewData["Title"]</h2>
+<p class="pt-2"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6">GitHub publikus repo</a></p>
+<ul>
+<li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/vue">VUE projekt</a></li>
+</ul>
