--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpRazor.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpRazor.cshtml
@@ -8,7 +8,7 @@
 <h5 class="pt-3">@ViewData["Title"]</h5>
 <p class="lead bg-light small pt-2">A frontend programozás Razor oldalakkal egy új terület amivel ebben az évben kezdtem foglalkozni.</p>
 <p class="pt-2">A fejlesztés .net 6 verzióban történik. Összefoglalva a legfontosabb fejlesztések:</p>
-<p class="pt-2"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6">Repository</a></p>
+<p class="pt-2"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6">GitHub publikus repo</a></p>
 <ul>
-    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-razor/KretaRazorPages/Pages/Menu/SubjectMenu">Subject CRUD</a></li>
+    <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/production-razor/KretaRazorPages">Razor projekt</a></li>
 </ul>
