--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpTest.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpTest.cshtml
@@ -6,6 +6,7 @@
 
 <h5 class="pt-3">@ViewData["Title"]</h5>
 <p class="lead bg-light small pt-2">A tanítás során a legfontosabb témám a desktop programozás volt. A tanulás során megtanultam teszteket is írni.</p>
+<p class="pt-2"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6">GitHub publikus repo</a></p>
 <p class="pt-2">Összegyűjtöttem a legfontosabb kódrészleteket a Git-Hub-ról:</p>
 <ul>
     <li class="pt-1"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6/tree/main/KretaParancssoriAlkalmazasMsTest">MSTest</a>
