--- a/KretaRazorPages/Pages/Menu/AboutMe/CSarpDesktop.cshtml
+++ b/KretaRazorPages/Pages/Menu/AboutMe/CSarpDesktop.cshtml
@@ -6,6 +6,7 @@
 
 <h5 class="pt-3">@ViewData["Title"]</h5>
 <p class="lead bg-light small pt-2">A tanítás során a legfontosabb témám a desktop programozás volt, így ebben C#-ban sokat kellett tanuljak.</p>
+<p class="pt-2">A letölthető forráskód:</p>
 <p class="pt-2">A fejlesztés .net 6 verzióban történik. Összegyűjtöttem a legfontosabb kódrészleteket a Git-Hub-ról:</p>
 <p class="pt-2"><a class="nav-link text-bg-light" target="_blank" href="https://github.com/gycsaba-kreta-exam/kreta-exam-api-web-desktop-dotnet-6">GitHub publikus repo</a></p>
 <ul>
